--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ src/contracts/deployed.js
 issuer-services/package-lock.json
 issuer-services/up.json
 issuer-services/config.json
+sampleREad.me.eg
