--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "prettier": "^1.14.2",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
+    "react-hot-toast": "^2.1.1",
     "react-icons": "^4.2.0",
     "react-redux": "^5.0.7",
     "react-styl": "^0.0.3",
